--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  jekyll
 
 # Build settings
 #theme: minima
-remote_theme: wemake-services/jekyll-theme-hackcss
+remote_theme: benbalter/retlab
 plugins:
   - jekyll-feed
 
