--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-#theme: minima
-remote_theme: benbalter/retlab
+theme: minima
+#remote_theme: benbalter/retlab
 plugins:
   - jekyll-feed
 
